--- a/page31.html
+++ b/page31.html
@@ -34,7 +34,7 @@
             font-size: 2.8em;
             color: #FFD700; /* Gold */
             text-shadow: 3px 3px 6px rgba(0,0,0,0.9);
-            margin-bottom: 5px; /* Less margin for second line */
+            margin-bottom: 5px; 
             animation: pulse 2s infinite;
         }
         h2 {
@@ -54,8 +54,8 @@
         /* Rotating Image Gallery Styles */
         #gallery-container {
             width: 90vw;
-            max-width: 450px; /* Adjust max-width as needed */
-            height: 60vh; /* Adjust height based on desired aspect ratio for images */
+            max-width: 450px; 
+            height: 60vh; 
             max-height: 450px;
             overflow: hidden;
             position: relative;
@@ -63,20 +63,23 @@
             box-shadow: 0 0 40px rgba(255, 105, 180, 0.8);
             z-index: 12;
             margin-bottom: 30px;
-            background: rgba(0, 0, 0, 0.6); /* Dark background for images */
-            display: flex; /* Use flex to center images if they don't fill */
+            background: rgba(0, 0, 0, 0.6); 
+            display: flex; 
             align-items: center;
             justify-content: center;
         }
 
         .gallery-image {
-            position: absolute; /* Stack images */
+            position: absolute; 
             width: 100%;
             height: 100%;
             object-fit: contain; /* IMPORTANT: Ensures original image is shown, no cropping */
             border-radius: 15px;
             opacity: 0;
-            transition: opacity 1s ease-in-out; /* Smooth fade effect */
+            transition: opacity 1s ease-in-out; 
+            /* Ensure images cover the container space to maximize visibility */
+            top: 0; 
+            left: 0;
         }
         .gallery-image.active {
             opacity: 1;
@@ -89,21 +92,21 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.7); /* Dark semi-transparent color */
+            background: rgba(0, 0, 0, 0.7); 
             z-index: 14;
-            display: none; /* Hidden by default */
+            display: none; 
             transition: opacity 0.5s;
         }
 
-        /* Centered Quiz styles */
+        /* Centered Quiz styles (Popup box) */
         #quiz-container {
-            position: fixed; /* Fixed position for central pop-up */
+            position: fixed; 
             top: 50%;
             left: 50%;
-            transform: translate(-50%, -50%); /* Centers the box */
+            transform: translate(-50%, -50%); 
             
             padding: 25px;
-            background: rgba(255, 105, 180, 1.0); /* Solid Pink box */
+            background: rgba(255, 105, 180, 1.0); 
             border-radius: 15px;
             visibility: hidden; 
             opacity: 0;
@@ -113,7 +116,7 @@
             gap: 15px;
             max-width: 300px;
             box-shadow: 0 0 40px rgba(255, 105, 180, 1);
-            z-index: 15; /* Above the overlay */
+            z-index: 15; 
         }
 
         #quiz-question {
@@ -148,7 +151,7 @@
             background: #6a1ac7;
         }
 
-        /* --- Emojis, Confetti, and Fireworks Animations --- */
+        /* --- Animations --- */
         .effect {
             position: fixed;
             font-size: 2rem;
@@ -206,6 +209,7 @@
         const quizContainer = document.getElementById('quiz-container');
         const galleryContainer = document.getElementById('gallery-container');
         let audioAttempted = false;
+        let galleryInterval; // Declare interval globally
 
         // --- Audio Autoplay Workaround ---
         function forceAudioStart() {
@@ -238,18 +242,21 @@
                 }
                 galleryContainer.appendChild(img);
             });
+            // Start rotation only if images were successfully created
+            if (galleryContainer.children.length > 0) {
+                galleryInterval = setInterval(rotateImages, 3000); 
+            }
         }
 
         function rotateImages() {
             const images = document.querySelectorAll('.gallery-image');
+            if (images.length === 0) return;
+
             images[currentImageIndex].classList.remove('active'); // Hide current
 
             currentImageIndex = (currentImageIndex + 1) % images.length;
             images[currentImageIndex].classList.add('active'); // Show next
         }
-
-        // Rotate every 3 seconds
-        const galleryInterval = setInterval(rotateImages, 3000); 
 
         // --- Grand Animation Logic (Unchanged from Page 30) ---
         const effects = ["💖", "✨", "❤️", "🥳", "🎁", "🎉", "⭐"];
@@ -292,12 +299,14 @@
         setInterval(launchFirework, 1500); 
 
         // --- Quiz Timing Logic (20 seconds delay after page load) ---
-        const QUIZ_DELAY_MS = 20000; // 20 seconds delay for gallery to cycle
+        const QUIZ_DELAY_MS = 20000; 
 
         document.addEventListener('DOMContentLoaded', () => {
-            loadImages(); // Load images once the DOM is ready
+            loadImages(); // Load images and start the rotation
             setTimeout(() => {
-                clearInterval(galleryInterval); // Stop rotating images when quiz appears
+                if (galleryInterval) {
+                    clearInterval(galleryInterval); // Stop rotating images when quiz appears
+                }
                 overlay.style.display = 'block';
                 quizContainer.style.visibility = 'visible';
                 quizContainer.style.opacity = 1;
