--- a/page31.html
+++ b/page31.html
@@ -62,8 +62,8 @@
             position: relative;
             z-index: 10;
             width: 80vw;
-            max-width: 450px; /* Max size for a centered portrait photo */
-            height: 60vh; /* Fixed height for display */
+            max-width: 450px; 
+            height: 60vh; 
             margin: 20px 0;
             overflow: hidden;
             border-radius: 20px;
@@ -77,7 +77,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            opacity: 0; /* Start hidden */
+            opacity: 0; 
             transition: opacity 1s ease-in-out;
             display: flex;
             justify-content: center;
@@ -85,7 +85,7 @@
         }
 
         .gallery-item.active {
-            opacity: 1; /* Current photo is visible */
+            opacity: 1; 
         }
 
         .gallery-item img {
@@ -102,17 +102,19 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            z-index: 100; /* FIX: Critical Z-INDEX to ensure it's tappable above confetti/fireworks */
+            z-index: 1000; /* ULTRA HIGH Z-INDEX to guarantee it's on top */
             background: rgba(255, 192, 203, 0.95); /* Pink Background */
             padding: 30px;
             border-radius: 20px;
             width: 90%;
             max-width: 400px;
-            display: none; /* Starts hidden */
+            display: none; 
             flex-direction: column;
             align-items: center;
             box-shadow: 0 0 40px #FFC0CB, 0 0 20px white;
             animation: popIn 0.5s forwards;
+            /* CRITICAL FIX: Ensure the quiz box itself captures events */
+            pointer-events: auto; 
         }
 
         @keyframes popIn {
@@ -122,7 +124,7 @@
 
         #quiz-label {
             font-size: 2.5em;
-            color: #8A2BE2; /* Blue-Violet for contrast */
+            color: #8A2BE2; 
             font-weight: bold;
             margin-bottom: 20px;
             text-shadow: 1px 1px 2px white;
@@ -144,7 +146,7 @@
             padding: 12px 25px;
             font-size: 1.3em;
             font-weight: bold;
-            background-color: #FF69B4; /* Hot Pink Submit Button */
+            background-color: #FF69B4; 
             color: white;
             border: none;
             border-radius: 50px;
@@ -153,11 +155,12 @@
             transition: background-color 0.3s;
         }
 
-        /* --- Grand Effects CSS (Same as previous, high density) --- */
-        .floating-emoji, .confetti-fall {
+        /* --- Grand Effects CSS (CRITICAL POINTER-EVENTS FIX) --- */
+        .floating-emoji, .confetti-fall, .firework, .firework-particle {
             position: fixed; 
-            pointer-events: none;
-            z-index: 1; /* Note: Lower than quiz z-index */
+            z-index: 1; 
+            /* FIX: Tell the browser to ignore these elements for clicking/tapping */
+            pointer-events: none; 
         }
         
         @keyframes float {
@@ -188,7 +191,7 @@
             box-shadow: 0 0 10px #FFD700, 0 0 20px #ff0;
             animation: fireworkBurst 1s forwards ease-out;
             opacity: 0;
-            z-index: 5; /* Note: Lower than quiz z-index */
+            z-index: 5; 
         }
 
         @keyframes fireworkBurst {
@@ -289,7 +292,6 @@
                         clearInterval(slideshowInterval);
                         // Show the quiz section after the slideshow is complete
                         setTimeout(() => {
-                            // Ensure the last image remains visible behind the quiz modal
                             galleryItems[photoFiles.length - 1].classList.add('active'); 
                             quizSection.style.display = 'flex';
                         }, 1000); // 1 second delay after last image transition
@@ -357,7 +359,8 @@
                 const particleCount = Math.floor(Math.random() * 10) + 10; 
                 for (let i = 0; i < particleCount; i++) {
                     const particle = document.createElement('div');
-                    particle.classList.add('firework-particle');
+                    // particle does NOT have pointer-events: none, so it inherits from parent
+                    particle.classList.add('firework-particle'); 
                     particle.style.backgroundColor = confettiColors[Math.floor(Math.random() * confettiColors.length)];
                     particle.style.width = `${Math.random() * 5 + 2}px`;
                     particle.style.height = particle.style.width;
