--- a/page32.html
+++ b/page32.html
@@ -1,7 +1,167 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Birthday Surprise - Page 32 (Grand Celebration)</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Comic Sans MS', cursive, sans-serif;
+            text-align: center;
+            color: white;
+            overflow: hidden;
+            position: relative;
+            background: #000033;
+        }
+
+        /* 1. Full Screen Video Background */
+        #video-background {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            z-index: 1;
+            filter: brightness(70%);
+        }
+
+        /* 2. Main Content Container */
+        .container {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            z-index: 10;
+        }
+
+        h1 {
+            font-size: 2.8em;
+            color: #ffcc00;
+            text-shadow: 3px 3px 6px rgba(0,0,0,0.9);
+            margin-bottom: 20px;
+            animation: pulse 2s infinite;
+        }
+
+        @keyframes pulse {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.05); }
+            100% { transform: scale(1); }
+        }
+
+        /* 3. Dark Overlay for Quiz Pop-up */
+        #overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.7); /* Dark semi-transparent color */
+            z-index: 14;
+            display: none; /* Hidden by default */
+            transition: opacity 0.5s;
+        }
+
+        /* 4. Centered Quiz styles */
+        #quiz-container {
+            position: fixed; /* Fixed position for central pop-up */
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%); /* Centers the box */
+            
+            padding: 25px;
+            background: rgba(255, 105, 180, 1.0); /* Solid Pink box */
+            border-radius: 15px;
+            visibility: hidden; 
+            opacity: 0;
+            transition: opacity 1s ease-in-out;
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            max-width: 300px;
+            box-shadow: 0 0 40px rgba(255, 105, 180, 1);
+            z-index: 15; /* Above the overlay */
+        }
+
+        #quiz-question {
+            font-size: 1.5em;
+            font-weight: bold;
+            color: #ffffff;
+            text-shadow: 1px 1px 2px #000;
+        }
+
+        #quiz-input {
+            padding: 12px;
+            border-radius: 8px;
+            border: 3px solid #8a2de2;
+            font-size: 1em;
+            color: #20002c;
+            width: 90%;
+            margin: 0 auto;
+        }
+
+        #quiz-submit {
+            padding: 12px 25px;
+            background: #8a2de2;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            font-weight: bold;
+            font-size: 1.1em;
+            transition: background 0.3s;
+        }
+        #quiz-submit:hover {
+            background: #6a1ac7;
+        }
+
+
+        /* --- Emojis, Confetti, and Fireworks Animations (Visual Effects) --- */
+        .effect {
+            position: fixed;
+            font-size: 2rem;
+            animation: float linear infinite;
+            z-index: 20;
+            pointer-events: none;
+        }
+        @keyframes float {
+            0% { transform: translateY(100vh) rotate(0deg); opacity: 1; }
+            100% { transform: translateY(-10vh) rotate(360deg); opacity: 0; }
+        }
+
+        .firework {
+            position: absolute;
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            opacity: 0;
+            z-index: 5;
+            animation: firework 2s ease-out infinite;
+        }
+
+        @keyframes firework {
+            0% { transform: translate(0, 0) scale(1); opacity: 1; }
+            100% { transform: translate(var(--x), var(--y)) scale(0); opacity: 0; }
+        }
+
+    </style>
+</head>
+<body onclick="forceAudioStart()">
+
+    <video autoplay loop muted playsinline id="video-background">
+        <source src="Page32.mp4" type="video/mp4">
+        Your browser does not support the video tag.
     </video>
 
     <audio id="bg-audio" loop>
-        <source src="Page30.mp3" type="audio/mpeg">
+        <source src="Page32.mp3" type="audio/mpeg">
     </audio>
 
     <div class="container">
@@ -11,9 +171,9 @@
     <div id="overlay"></div>
 
     <div id="quiz-container">
-        <div id="quiz-question">Azhagu Pink 🩷 Bomma🙈</div>
+        <div id="quiz-question">Antha Siripu 🙈</div>
         <input type="text" id="quiz-input" placeholder="Type your sweet reply here..." required>
-        <button id="quiz-submit" onclick="submitQuiz()">Submit & Go to Page 31 →</button>
+        <button id="quiz-submit" onclick="submitQuiz()">Submit →</button>
     </div>
 
     <script>
