--- a/page33.html
+++ b/page33.html
@@ -173,7 +173,7 @@
     <div id="quiz-container">
         <div id="quiz-question"Happy Birthday Panda 🐼😚</div>
         <input type="text" id="quiz-input" placeholder="Type your sweet reply here..." required>
-        <button id="quiz-submit" onclick="submitQuiz()">Submit & Go to Page 31 →</button>
+        <button id="quiz-submit" onclick="submitQuiz()">Submit→</button>
     </div>
 
     <script>
