--- a/page34.html
+++ b/page34.html
@@ -171,9 +171,9 @@
     <div id="overlay"></div>
 
     <div id="quiz-container">
-        <div id="quiz-question"Happy Birthday En Chelloww Friendeyyy 😚💙</div>
+        <div id="quiz-question Dangerous spot 🤭🤭</div>
         <input type="text" id="quiz-input" placeholder="Type your sweet reply here..." required>
-        <button id="quiz-submit" onclick="submitQuiz()">Submit & Go to Page 31 →</button>
+        <button id="quiz-submit" onclick="submitQuiz()">Submit →</button>
     </div>
 
     <script>
