--- a/page34.html
+++ b/page34.html
@@ -171,7 +171,7 @@
     <div id="overlay"></div>
 
     <div id="quiz-container">
-        <div id="quiz-question Dangerous spot 🤭🤭</div>
+        <div id="quiz-question"Dangerous spot 🤭🤭</div>
         <input type="text" id="quiz-input" placeholder="Type your sweet reply here..." required>
         <button id="quiz-submit" onclick="submitQuiz()">Submit →</button>
     </div>
@@ -237,8 +237,8 @@
         }
         setInterval(launchFirework, 1500); 
 
-        // --- Quiz Timing Logic (18 seconds delay) ---
-        const QUIZ_DELAY_MS = 18000; // 18 seconds delay
+        // --- Quiz Timing Logic (25 seconds delay) ---
+        const QUIZ_DELAY_MS = 25000; // 25 seconds delay
 
         setTimeout(() => {
             // Show overlay and quiz box
