--- a/page35.html
+++ b/page35.html
@@ -171,7 +171,7 @@
     <div id="overlay"></div>
 
     <div id="quiz-container">
-        <div id="quiz-En Best Friend di nii😚🤗</div>
+        <div id="quiz-question">En Best Friend di ni ...Lov uuu❤️‍🩹😚</div>
         <input type="text" id="quiz-input" placeholder="Type your sweet reply here..." required>
         <button id="quiz-submit" onclick="submitQuiz()">Submit →</button>
     </div>
