--- a/page34.html
+++ b/page34.html
@@ -171,7 +171,7 @@
     <div id="overlay"></div>
 
     <div id="quiz-container">
-        <div id="quiz-question"Dangerous spot 🤭🤭</div>
+        <div id="quiz-question"Dangerous spot 🤭🤭 nalla killiko🤭🤭</div>
         <input type="text" id="quiz-input" placeholder="Type your sweet reply here..." required>
         <button id="quiz-submit" onclick="submitQuiz()">Submit →</button>
     </div>
