--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <script>
     let tapCount = 0;
     const REQUIRED_TAPS = 10; // ✅ 10 taps required
-    const PASSWORD = "8248845258";
+    const PASSWORD = "Hate uuu My Bestest Friend";
 
     const tapArea = document.getElementById("tapArea");
 
